--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "castello_js",
   "version": "0.0.1",
-  "dependencies": {
-    "express": "2.5.x",
-    "jade": "0.20.1"
-  },
-  "engines": {
-    "node": "0.6.x"
+  "devDependencies": {
+    "coffee-script": ">= 1.3.1",
+    "jsmin": "*"
   }
 }
